[gd_scene load_steps=4 format=3 uid="uid://cnr5a28dgksfl"]

[ext_resource type="Theme" uid="uid://ylxreo2wvgdq" path="res://themes/main_theme.tres" id="1_njjqb"]
[ext_resource type="Script" path="res://scripts/spot.gd" id="2_o3udh"]
[ext_resource type="AudioStream" uid="uid://cem004u8x2a4a" path="res://audio/squooshsound1.mp3" id="3_k4svv"]

[node name="game_spot" type="Panel"]
custom_minimum_size = Vector2(48, 48)
offset_right = 45.0
offset_bottom = 45.0
theme = ExtResource("1_njjqb")
script = ExtResource("2_o3udh")

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_k4svv")
volume_db = 14.055

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
